Atualização do README

--- a/README
+++ b/README
@@ -14,3 +14,6 @@ estruturados.
 6. Gestão de Mudanças: Simulação de uma alteração no escopo do projeto, com uma
 justificativa no README.md e adaptação do Kanban
 
+Foi desenvolvido um Sistema de acompanhamento de frota onde será possivel
+Atualização da frota desde a fase de inicio da coleta o trajeto e entrega final da mercadoria
+
