--- a/README
+++ b/README
@@ -17,3 +17,4 @@ justificativa no README.md e adaptação do Kanban
 Foi desenvolvido um Sistema de acompanhamento de frota onde será possivel
 Atualização da frota desde a fase de inicio da coleta o trajeto e entrega final da mercadoria
 
+sendo responsabilidade dos funcionarios a alimentação deste sistema
